Fixed sidebar on mobile for holiday pages

--- a/components/Sidebar/Sidebar.module.css
+++ b/components/Sidebar/Sidebar.module.css
@@ -1,7 +1,8 @@
 /* Style the full sidebar */
 .sidebar {
 	position: fixed;
-	top: var(--header-height, 80px);
+	/* top: var(--header-height, 80px); */
+	/* padding-top: var(--header-height, 80px); */
 	width: var(--sidebar-width, 200px);
 	height: 100vh;
 	background-color: #FFF;
@@ -17,6 +18,15 @@
 	top: 0;
 	width: var(--sidebar-width-static, 300px);
 	opacity: 1;
+}
+
+.sideBarLogoContainer {
+	height: var(--header-height, 80px);
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+	margin-left: 20px;
 }
 
 .sidebarOpen {
@@ -118,6 +128,12 @@
 }
 
 /* Style a toggle button that shows for mobile devices */
+.sidebarCloseButtonContainer {
+	height: 40px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
 
 .toggle-button {
 	background-color: #555;
@@ -132,12 +148,11 @@
 }
 
 
-/* Style a sidebar back container to be clicked to close the sidebar */
-
-.sidebarBackContainer {
-	position: fixed;
+/* Style a sidebar blackout container to be clicked to close the sidebar */
+.sidebarBlackout {
 	/* background-color: #FF00F0; */
 	opacity: 0;
+	position: fixed;
 	top: 0;
 	height: 100vh;
 	width: calc(100vw - var(--sidebar-width, 300px));
@@ -145,14 +160,14 @@
 	z-index: 2;
 }
 
-.sidebarBackContainerHidden {
+.sidebarBlackoutHidden {
 	visibility: hidden;
 }
 
-.sidebarBackContainerOpen {
+.sidebarBlackoutOpen {
 	left: var(--sidebar-width, 300px);
 }
 
-.sidebarBackContainerClosed {
+.sidebarBlackoutClosed {
 	left: calc(var(--sidebar-width, 300px) * -1);
 }
